// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`event-filter-form Renders \`event-filter-form\` with \`break\` type 1`] = `
<div>
  <div
    class="layout"
  >
    <div
      class="flex xs8"
    >
      <c-id-field-stub
        class="mr-3"
        help-text="If no id is specified, a unique id will be generated automatically on rule creation"
        value="event-filter-id"
      />
    </div>
    <div
      class="flex xs4"
    >
      <c-event-filter-type-field-stub
        class="ml-3"
        value="break"
      />
    </div>
  </div>
  <c-description-field-stub
    required=""
    value="event-filter-description"
  />
  <div
    class="layout justify-space-between"
  >
    <c-enabled-field-stub
      value="true"
    />
    <c-priority-field-stub
      value="2"
    />
  </div>
  <c-information-block-stub
    title="Applied during this period only"
  >
    <event-filter-drop-intervals-field-stub
      form="[object Object]"
    />
  </c-information-block-stub>
  <pbehavior-recurrence-rule-field-stub
    class="mb-3"
    form="[object Object]"
  />
  <c-patterns-field-stub
    entity-counters-type=""
    some-required=""
    value="[object Object]"
    with-entity=""
    with-event=""
  />
  <!---->
</div>
`;

exports[`event-filter-form Renders \`event-filter-form\` with \`change_entity\` type 1`] = `
<div>
  <div
    class="layout"
  >
    <div
      class="flex xs8"
    >
      <c-id-field-stub
        class="mr-3"
        help-text="If no id is specified, a unique id will be generated automatically on rule creation"
        value="event-filter-id"
      />
    </div>
    <div
      class="flex xs4"
    >
      <c-event-filter-type-field-stub
        class="ml-3"
        value="change_entity"
      />
    </div>
  </div>
  <c-description-field-stub
    required=""
    value="event-filter-description"
  />
  <div
    class="layout justify-space-between"
  >
    <c-enabled-field-stub
      value="true"
    />
    <c-priority-field-stub
      value="2"
    />
  </div>
  <c-information-block-stub
    title="Applied during this period only"
  >
    <event-filter-drop-intervals-field-stub
      form="[object Object]"
    />
  </c-information-block-stub>
  <pbehavior-recurrence-rule-field-stub
    class="mb-3"
    form="[object Object]"
  />
  <c-patterns-field-stub
    entity-counters-type=""
    some-required=""
    value="[object Object]"
    with-entity=""
    with-event=""
  />
  <hr
    aria-orientation="horizontal"
    class="my-3 v-divider theme--light"
    role="separator"
  />
  <c-information-block-stub
    title="Change entity options"
  >
    <c-collapse-panel-stub
      class="mb-2"
      title="External data"
    >
      <external-data-form-stub
        form=""
        name="external_data"
        types=""
        variables="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
      />
    </c-collapse-panel-stub>
    <event-filter-change-entity-form-stub
      form="[object Object]"
      name="config"
      variables="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
    />
  </c-information-block-stub>
</div>
`;

exports[`event-filter-form Renders \`event-filter-form\` with \`drop\` type 1`] = `
<div>
  <div
    class="layout"
  >
    <div
      class="flex xs8"
    >
      <c-id-field-stub
        class="mr-3"
        help-text="If no id is specified, a unique id will be generated automatically on rule creation"
        value="event-filter-id"
      />
    </div>
    <div
      class="flex xs4"
    >
      <c-event-filter-type-field-stub
        class="ml-3"
        value="drop"
      />
    </div>
  </div>
  <c-description-field-stub
    required=""
    value="event-filter-description"
  />
  <div
    class="layout justify-space-between"
  >
    <c-enabled-field-stub
      value="true"
    />
    <c-priority-field-stub
      value="2"
    />
  </div>
  <c-information-block-stub
    title="Applied during this period only"
  >
    <event-filter-drop-intervals-field-stub
      form="[object Object]"
    />
  </c-information-block-stub>
  <pbehavior-recurrence-rule-field-stub
    class="mb-3"
    form="[object Object]"
  />
  <c-patterns-field-stub
    entity-counters-type=""
    some-required=""
    value="[object Object]"
    with-entity=""
    with-event=""
  />
  <!---->
</div>
`;

exports[`event-filter-form Renders \`event-filter-form\` with \`enrichment\` type 1`] = `
<div>
  <div
    class="layout"
  >
    <div
      class="flex xs8"
    >
      <c-id-field-stub
        class="mr-3"
        help-text="If no id is specified, a unique id will be generated automatically on rule creation"
        value="event-filter-id"
      />
    </div>
    <div
      class="flex xs4"
    >
      <c-event-filter-type-field-stub
        class="ml-3"
        value="enrichment"
      />
    </div>
  </div>
  <c-description-field-stub
    required=""
    value="event-filter-description"
  />
  <div
    class="layout justify-space-between"
  >
    <c-enabled-field-stub
      value="true"
    />
    <c-priority-field-stub
      value="2"
    />
  </div>
  <c-information-block-stub
    title="Applied during this period only"
  >
    <event-filter-drop-intervals-field-stub
      form="[object Object]"
    />
  </c-information-block-stub>
  <pbehavior-recurrence-rule-field-stub
    class="mb-3"
    form="[object Object]"
  />
  <c-patterns-field-stub
    entity-counters-type=""
    some-required=""
    value="[object Object]"
    with-entity=""
    with-event=""
  />
  <hr
    aria-orientation="horizontal"
    class="my-3 v-divider theme--light"
    role="separator"
  />
  <c-information-block-stub
    title="Enrichment options"
  >
    <c-collapse-panel-stub
      class="mb-2"
      title="External data"
    >
      <external-data-form-stub
        form=""
        name="external_data"
        types=""
        variables="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
      />
    </c-collapse-panel-stub>
    <event-filter-enrichment-form-stub
      form="[object Object]"
      name="config.actions"
      templatevariables="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
    />
  </c-information-block-stub>
</div>
`;

exports[`event-filter-form Renders \`event-filter-form\` with custom props 1`] = `
<div>
  <div
    class="layout"
  >
    <div
      class="flex xs8"
    >
      <c-id-field-stub
        class="mr-3"
        help-text="If no id is specified, a unique id will be generated automatically on rule creation"
        value="event-filter-id"
      />
    </div>
    <div
      class="flex xs4"
    >
      <c-event-filter-type-field-stub
        class="ml-3"
        value="drop"
      />
    </div>
  </div>
  <c-description-field-stub
    required=""
    value="event-filter-description"
  />
  <div
    class="layout justify-space-between"
  >
    <c-enabled-field-stub
      value="true"
    />
    <c-priority-field-stub
      value="2"
    />
  </div>
  <c-information-block-stub
    title="Applied during this period only"
  >
    <event-filter-drop-intervals-field-stub
      form="[object Object]"
    />
  </c-information-block-stub>
  <pbehavior-recurrence-rule-field-stub
    class="mb-3"
    form="[object Object]"
  />
  <c-patterns-field-stub
    entity-counters-type=""
    some-required=""
    value="[object Object]"
    with-entity=""
    with-event=""
  />
  <!---->
</div>
`;

exports[`event-filter-form Renders \`event-filter-form\` with default props 1`] = `
<div>
  <div
    class="layout"
  >
    <div
      class="flex xs8"
    >
      <c-id-field-stub
        class="mr-3"
        help-text="If no id is specified, a unique id will be generated automatically on rule creation"
      />
    </div>
    <div
      class="flex xs4"
    >
      <c-event-filter-type-field-stub
        class="ml-3"
      />
    </div>
  </div>
  <c-description-field-stub
    required=""
  />
  <div
    class="layout justify-space-between"
  >
    <c-enabled-field-stub />
    <c-priority-field-stub />
  </div>
  <c-information-block-stub
    title="Applied during this period only"
  >
    <event-filter-drop-intervals-field-stub
      form="[object Object]"
    />
  </c-information-block-stub>
  <pbehavior-recurrence-rule-field-stub
    class="mb-3"
    form="[object Object]"
  />
  <c-patterns-field-stub
    entity-counters-type=""
    some-required=""
    with-entity=""
    with-event=""
  />
  <!---->
</div>
`;
